RichwoodNew/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Detail__c</fullName>
        <description>Detailed reason Project was lost.</description>
        <label>Lost Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Relationship with other Foundry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>rwc - Declined to Quote</fullName>
                </value>
                <value>
                    <fullName>rwc - Beyond current capabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Total__c</fullName>
        <inlineHelpText>This is a rollup summary of the Parts Line Totals</inlineHelpText>
        <label>Parts Total</label>
        <summarizedField>Project_Part__c.Line_Total__c</summarizedField>
        <summaryForeignKey>Project_Part__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Client_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Client POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects for this Contact</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Quoting</fullName>
                </value>
                <value>
                    <fullName>PO for Tooling Received</fullName>
                </value>
                <value>
                    <fullName>First Article PO Received</fullName>
                </value>
                <value>
                    <fullName>Engineering/Testing</fullName>
                </value>
                <value>
                    <fullName>Awaiting Acceptance</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Billing Complete</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Client_POC__c</columns>
        <columns>Stage__c</columns>
        <columns>Parts_Total__c</columns>
        <columns>Project_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Shipped,Billing Complete,Lost</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Client_POC__c</columns>
        <columns>Stage__c</columns>
        <columns>Parts_Total__c</columns>
        <columns>Project_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Shipped,Billing Complete,Lost</value>
        </filters>
        <label>All Open Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>